// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseLine() can parse comment lines >    @collapse end  1`] = `
{
  "config": {
    "mark": "end",
    "offset": 3,
  },
  "type": "DirectiveCollapse",
}
`;

exports[`parseLine() can parse comment lines >    @collapse start  1`] = `
{
  "config": {
    "mark": "start",
    "offset": 3,
  },
  "type": "DirectiveCollapse",
}
`;

exports[`parseLine() can parse comment lines >    @collapse unexpected  1`] = `null`;

exports[`parseLine() can parse comment lines >    @dim  1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveDim",
}
`;

exports[`parseLine() can parse comment lines >    @dim below 1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveDim",
}
`;

exports[`parseLine() can parse comment lines >    @dim end  1`] = `
{
  "config": {
    "mark": "end",
  },
  "type": "DirectiveDim",
}
`;

exports[`parseLine() can parse comment lines >    @dim start  1`] = `
{
  "config": {
    "mark": "start",
  },
  "type": "DirectiveDim",
}
`;

exports[`parseLine() can parse comment lines >    @focus  1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveFocus",
}
`;

exports[`parseLine() can parse comment lines >    @focus below  1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveFocus",
}
`;

exports[`parseLine() can parse comment lines >    @focus end  1`] = `
{
  "config": {
    "mark": "end",
  },
  "type": "DirectiveFocus",
}
`;

exports[`parseLine() can parse comment lines >    @focus start  1`] = `
{
  "config": {
    "mark": "start",
  },
  "type": "DirectiveFocus",
}
`;

exports[`parseLine() can parse comment lines >    @highlight  1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveHighlight",
}
`;

exports[`parseLine() can parse comment lines >    @highlight below  1`] = `
{
  "config": {
    "mark": "below",
  },
  "type": "DirectiveHighlight",
}
`;

exports[`parseLine() can parse comment lines >    @highlight end  1`] = `
{
  "config": {
    "mark": "end",
  },
  "type": "DirectiveHighlight",
}
`;

exports[`parseLine() can parse comment lines >    @highlight start  1`] = `
{
  "config": {
    "mark": "start",
  },
  "type": "DirectiveHighlight",
}
`;

exports[`parseLine() can parse comment lines >    @highlight unexpected  1`] = `null`;

exports[`parseLine() can parse comment lines >    [This is annotation]   1`] = `
{
  "config": {
    "content": "This is annotation",
    "offset": 3,
  },
  "type": "AnnotationLine",
}
`;

exports[`parseLine() can parse comment lines >    [This is annotation] <<<   1`] = `
{
  "config": {
    "content": "This is annotation",
    "offset": 0,
  },
  "type": "AnnotationLine",
}
`;

exports[`parseLine() can parse comment lines >    [This is annotation]<   1`] = `
{
  "config": {
    "content": "This is annotation",
    "offset": 2,
  },
  "type": "AnnotationLine",
}
`;

exports[`parseLine() can parse comment lines >    ^   1`] = `
{
  "config": {
    "offset": 3,
  },
  "type": "DirectiveCallout",
}
`;

exports[`parseLine() can parse comment lines >    ^ <<<  1`] = `
{
  "config": {
    "offset": 0,
  },
  "type": "DirectiveCallout",
}
`;

exports[`parseLine() can parse comment lines >    ^<   1`] = `
{
  "config": {
    "offset": 2,
  },
  "type": "DirectiveCallout",
}
`;

exports[`parseLine() can parse comment lines >   ......   1`] = `
{
  "config": {
    "content": "......",
    "offset": 2,
    "style": "dotted",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   ...... <<   1`] = `
{
  "config": {
    "content": "......",
    "offset": 0,
    "style": "dotted",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   ......<   1`] = `
{
  "config": {
    "content": "......",
    "offset": 1,
    "style": "dotted",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   ~~~~~~~~ <<  1`] = `
{
  "config": {
    "content": "~~~~~~~~",
    "offset": 0,
    "style": "wavy",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   ~~~~~~~~<   1`] = `
{
  "config": {
    "content": "~~~~~~~~",
    "offset": 1,
    "style": "wavy",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   -------   1`] = `
{
  "config": {
    "content": "-------",
    "offset": 2,
    "style": "solid",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   ------- <<   1`] = `
{
  "config": {
    "content": "-------",
    "offset": 0,
    "style": "solid",
  },
  "type": "DirectiveUnderline",
}
`;

exports[`parseLine() can parse comment lines >   -------<   1`] = `
{
  "config": {
    "content": "-------",
    "offset": 1,
    "style": "solid",
  },
  "type": "DirectiveUnderline",
}
`;
